Create user schema, user model, userRouter, userService
